ARROW-2025: [C++] Creating multiple equivalent `HadoopFileSystem`s works fine

Previously creating two instances of `HadoopFileSystem` using the same init parameters would result in both pointing to the same `hdfsFS` object. If one `HadoopFileSystem` disconnected then the underlying `hdfsFS` would be closed for both instances.

To fix this, we force a new instance of `hdfsFS` on connect, removing this cacheing behavior.

Author: Jim Crist <jiminy.crist@gmail.com>

Closes #1499 from jcrist/no-cache-hdfs and squashes the following commits:

f8ff1351 [Jim Crist] Add test
bf6627e8 [Jim Crist] Force libhdfs/libhdfs3 to return new FS on connect